csrc/tests/zxbc_parse_expected/unary_crash.err.expected
<PROJECT_ROOT>/tests/functional/arch/zx48k/unary_crash.bas:2: error: 'b' is neither an array nor a function.
